--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "debug": "~2.6.9",
     "dotenv": "^8.0.0",
     "express": "~4.16.1",
+    "http-errors": "^1.7.2",
     "mongoose": "^5.5.11",
     "morgan": "~1.9.1",
     "qs": "^6.7.0"
